# LearnOpenGL

./: CMakeLists.txt  Readme.md
cmake/: FetchAssimp.cmake  FetchGlad.cmake  FetchGlfw.cmake  FetchGlm.cmake  FetchStb.cmake
lib/learnopengl/: camera.cpp  camera.hpp  cameracontroller.cpp  cameracontroller.hpp  diffusespecularmaterial.hpp  directionlight.hpp  fileinfo.cpp  fileinfo.hpp  fpscounter.cpp  fpscounter.hpp  gridfloor.cpp  gridfloor.hpp  material.hpp  materialcollection.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  phongmaterial.hpp  phongmaterialcollection.hpp  pointlight.hpp  shader.cpp  shader.hpp  spotlight.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
resources/shaders/: gridfloor.fs  gridfloor.vs
src/1.getting_started/1.1.hello_window/: main.cpp
src/1.getting_started/2.1.hello_triangle/: main.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: main.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: main.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: main.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: main.cpp
src/1.getting_started/3.1.shaders_uniform/: main.cpp
src/1.getting_started/3.2.shaders_interpolation/: main.cpp
src/1.getting_started/3.3.shaders_class/: main.cpp
src/1.getting_started/3.4.shaders_exercise1/: shader.vs
src/1.getting_started/3.5.shaders_exercise2/: main.cpp  shader.vs
src/1.getting_started/3.6.shaders_exercise3/: main.cpp  shader.fs  shader.vs
src/1.getting_started/4.1.textures/: main.cpp  shader.fs
src/1.getting_started/4.2.textures_combined/: main.cpp
src/1.getting_started/4.3.textures_exercise1/: main.cpp  shader.fs
src/1.getting_started/4.4.textures_exercise2/: main.cpp  shader.vs
src/1.getting_started/4.5.textures_exercise3/: main.cpp  shader.vs
src/1.getting_started/4.6.textures_exercise4/: main.cpp  shader.fs
src/1.getting_started/5.1.transformations/: main.cpp
src/1.getting_started/5.2.transformations_exercise2/: main.cpp  shader.fs
src/1.getting_started/6.1.coordinate_systems_cube/: main.cpp
src/1.getting_started/6.1.coordinate_systems_plan/: main.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: main.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: main.cpp  shader.fs
src/1.getting_started/7.1.camera_circle/: main.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: main.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: main.cpp
src/1.getting_started/7.4.camera_class/: main.cpp
src/2.lighting/1.colors/: main.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: main.cpp
src/2.lighting/2.2.basic_lighting_specular/: main.cpp  shader.vs
src/2.lighting/2.3.basic_lighting_specular_repeat_box/: main.cpp  shader.fs
src/2.lighting/2.4.basic_lighting_specular_view_space/: main.cpp  shader.fs  shader.vs
src/2.lighting/2.5.basic_lighting_specular_gouraud/: main.cpp  shader.vs
src/2.lighting/2.6.basic_lighting_specular_texture/: main.cpp  shader.fs
src/2.lighting/2.7.basic_lighting_specular_light_from_view/: main.cpp  shader.fs
src/2.lighting/3.1.materials/: main.cpp
src/2.lighting/3.2.materials_exercise1/: main.cpp  shader.fs
src/2.lighting/4.1.lighting_maps_diffuse_map/: main.cpp  shader.fs
src/2.lighting/4.2.lighting_maps_specular_map/: main.cpp
src/2.lighting/4.3.lighting_maps_exercise3/: main.cpp  shader.fs  shader.vs
src/2.lighting/4.4.lighting_maps_exercise4/: main.cpp  shader.fs
src/2.lighting/5.1.light_casters_directional/: main.cpp  shader.fs
src/2.lighting/5.1.light_casters_directional_modelview/: main.cpp  shader.fs  shader.vs
src/2.lighting/5.2.light_casters_point/: main.cpp  shader.fs
src/2.lighting/5.3.light_casters_spot/: main.cpp  shader.fs
src/2.lighting/5.4.light_casters_spot_soft/: shader.fs
src/2.lighting/6.1.multiple_lights/: main.cpp  shader.fs  shader.vs
src/2.lighting/6.2.multiple_lights_desert/: main.cpp
src/3.model_loading/1.0.model_loading_cube/: main.cpp
src/3.model_loading/1.1.model_loading_backpack/: main.cpp  shader.fs
src/3.model_loading/1.2.model_loading_ibm3278/: main.cpp
src/3.model_loading/1.3.model_loading_zelda/: main.cpp
src/3.model_loading/1.4.model_floor_grid/: main.cpp  shader.fs
